# zeta-quantum

./: Cargo.toml  LICENSE  README.md  phi_quantum.jl  qubit.rs
.github/workflows/: ci.yml
src/: PhiQuantum.jl  api.jl  api.rs  bms.rs  cache.rs  cli.jl  compile.jl  cost.rs  error.rs  flux_holonomy.rs  ir.jl  ir.rs  lib.rs  nonlocal_dynamics.rs  phi_ir.rs  qpu.rs  radiative_entropy.rs
tests/: bms_test.rs  integration_test.rs  theorem_test.rs
