[package]
name = "zeta-quantum"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"

description = "Quantum compiler + API service using Phi-IR (Affine Weyl words), modality-aware QPU routing, and obstruction cost S_X with BMS observability."
license = "MIT"
repository = "https://github.com/zetareticula/zeta-quantum"
homepage = "https://github.com/zetareticula/zeta-quantum"
readme = "README.md"
keywords = ["quantum", "compiler", "axum", "qpu", "simulation"]
categories = ["science", "compilers", "simulation", "web-programming::http-server"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "zeta-quantum-server"
path = "src/bin/zeta-quantum-server.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.13"
nalgebra = "0.33"
once_cell = "1"
ordered-float = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["compression-full", "timeout", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"